crates/php-parser/tests/snapshots/integration__stmt_function_typedeclarations.snap
---
source: crates/php-parser/tests/integration.rs
expression: to_json(& result.program)
---
{
  "stmts": [
    {
      "kind": {
        "Function": {
          "name": "a",
          "params": [
            {
              "name": "b",
              "type_hint": null,
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 18,
                "end": 20
              }
            },
            {
              "name": "c",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "array"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 22,
                      "end": 27
                    }
                  }
                },
                "span": {
                  "start": 22,
                  "end": 27
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 22,
                "end": 30
              }
            },
            {
              "name": "d",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "callable"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 32,
                      "end": 40
                    }
                  }
                },
                "span": {
                  "start": 32,
                  "end": 40
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 32,
                "end": 43
              }
            },
            {
              "name": "f",
              "type_hint": {
                "kind": {
                  "Named": {
                    "parts": [
                      "E"
                    ],
                    "kind": "Unqualified",
                    "span": {
                      "start": 45,
                      "end": 47
                    }
                  }
                },
                "span": {
                  "start": 45,
                  "end": 47
                }
              },
              "default": null,
              "by_ref": false,
              "variadic": false,
              "is_readonly": false,
              "is_final": false,
              "visibility": null,
              "set_visibility": null,
              "attributes": [],
              "span": {
                "start": 45,
                "end": 49
              }
            }
          ],
          "body": [],
          "return_type": null,
          "by_ref": false,
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 53
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 53
  }
}
